--- a/ui/package.json
+++ b/ui/package.json
@@ -11,8 +11,10 @@
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-less": "^6.0.2",
+    "@codemirror/lang-markdown": "^6.2.5",
     "@codemirror/lang-python": "6.0.0",
     "@codemirror/lang-sass": "^6.0.2",
+    "@codemirror/language-data": "^6.5.1",
     "@uiw/react-codemirror": "4.22.2",
     "bootstrap": "^5.1.3",
     "concurrently": "^7.2.0",
@@ -25,6 +27,7 @@
     "monaco-editor": "^0.33.0",
     "react": "18.3.1",
     "react-bootstrap": "^2.4.0",
+    "react-codemirror-merge": "^4.23.2",
     "react-cookie": "4.1.1",
     "react-dom": "18.3.1",
     "react-icons-kit": "^1.3.1",
