--- a/ui/package.json
+++ b/ui/package.json
@@ -7,6 +7,7 @@
   "homepage": "./",
   "main": "./public/electron.js",
   "dependencies": {
+    "@codemirror/commands": "^6.6.2",
     "@codemirror/lang-go": "^6.0.1",
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/lang-javascript": "^6.2.2",
@@ -15,6 +16,7 @@
     "@codemirror/lang-python": "6.0.0",
     "@codemirror/lang-sass": "^6.0.2",
     "@codemirror/language-data": "^6.5.1",
+    "@codemirror/view": "^6.33.0",
     "@uiw/react-codemirror": "4.22.2",
     "bootstrap": "^5.1.3",
     "concurrently": "^7.2.0",
