--- a/ui/package.json
+++ b/ui/package.json
@@ -56,7 +56,8 @@
     "@types/dompurify": "^2.4.0",
     "electron": "^30.1.0",
     "electron-builder": "^24.13.3",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "ts-standard": "^12.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
