--- a/ui/package.json
+++ b/ui/package.json
@@ -24,6 +24,7 @@
     "dompurify": "^2.3.10",
     "electron-is-dev": "^2.0.0",
     "electron-log": "^5.2.0",
+    "electron-store": "^10.0.0",
     "html-react-parser": "^3.0.1",
     "html-to-react": "^1.5.0",
     "jotai": "1.7.2",
