--- a/.github/workflows/electron-mac.yml
+++ b/.github/workflows/electron-mac.yml
@@ -1,28 +1,28 @@
-name: Build and Release Electron App
+name: MacOS Build and Release Electron App
 
 on:
-  release:
-    types: [created]
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v2
         with:
-          go-version: '1.23'
+          go-version: '1.20' # Change to your required Go version
 
-      - name: Update and install dependencies
+      - name: Install ZeroMQ
         run: |
-          sudo apt-get update
-          sudo apt-get install -y libzmq3-dev
-          # Verify installation
-          dpkg -s libzmq3-dev
+          brew update
+          brew install zeromq
 
       - name: Build
         run: go build -o ui/public/zasper app.go
