add github action for ubuntu and macos

--- a/.github/workflows/electron-mac.yml
+++ b/.github/workflows/electron-mac.yml
@@ -5,10 +5,14 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+    
 
 jobs:
   build:
     runs-on: macos-latest
+
+    env:
+      CI: false
 
     steps:
       - name: Checkout code
