--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,8 @@
     "@codemirror/lang-sass": "^6.0.2",
     "@codemirror/language-data": "^6.5.1",
     "@codemirror/view": "^6.33.0",
+    "@uiw/codemirror-theme-darcula": "^4.23.6",
+    "@uiw/codemirror-theme-github": "^4.23.6",
     "@uiw/react-codemirror": "4.22.2",
     "bootstrap": "^5.1.3",
     "concurrently": "^7.2.0",
