--- a/.github/workflows/electron-mac.yml
+++ b/.github/workflows/electron-mac.yml
@@ -29,7 +29,7 @@ jobs:
           brew install zeromq
 
       - name: Build
-        run: go build -o ui/public/zasper
+        run: go build -tags webapp -o ui/public/zasper
         
       - name: Set up Node.js
         uses: actions/setup-node@v4
