--- a/.github/workflows/gobuild.yml
+++ b/.github/workflows/gobuild.yml
@@ -29,7 +29,7 @@ jobs:
         dpkg -s libzmq3-dev
 
     - name: Build
-      run: go build -v ./...
+      run: go build -tags apiserver -v ./...
 
     - name: Test
       run: go test -v ./...
