--- a/.github/workflows/gobuild.yml
+++ b/.github/workflows/gobuild.yml
@@ -32,4 +32,4 @@ jobs:
       run: go build -tags apiserver -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test  -tags apiserver  -v ./...
