--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zasper",
-  "author": "prasunanand",
+  "author": "Prasun Anand <prasun@zasper.io>",
   "description": "IDE",
   "version": "0.1.0",
   "private": true,
@@ -70,8 +70,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron-dev": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
-    "electron-package": "./node_modules/.bin/electron-builder -m  -c.extraMetadata.main=build/electron.js",
-    "preelectron-package": "npm run build"
+    "electron-package": "electron-builder --mac --linux"
   },
   "build": {
     "appId": "io.zasper.prasunanand.zasper",
