--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
     "@codemirror/lang-go": "^6.0.1",
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-json": "6.0.1",
     "@codemirror/lang-less": "^6.0.2",
     "@codemirror/lang-markdown": "^6.2.5",
     "@codemirror/lang-python": "6.0.0",
@@ -52,6 +53,8 @@
     "wait-on": "^7.2.0",
     "web-vitals": "^2.1.2",
     "websocket": "1.0.34",
+    "uuid": "11.0.5",
+    "lodash": "^4.17.21",
     "xterm": "5.1.0",
     "xterm-addon-attach": "^0.8.0",
     "xterm-addon-fit": "0.7.0",
