--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,12 @@
     "@uiw/codemirror-theme-darcula": "^4.23.6",
     "@uiw/codemirror-theme-github": "^4.23.6",
     "@uiw/react-codemirror": "4.22.2",
+    "@xterm/addon-attach": "0.11.0",
+    "@xterm/addon-fit": "0.10.0",
+    "@xterm/addon-serialize": "^0.13.0",
+    "@xterm/addon-unicode11": "^0.8.0",
+    "@xterm/addon-web-links": "0.11.0",
+    "@xterm/xterm": "5.5.0",
     "bootstrap": "^5.1.3",
     "concurrently": "^7.2.0",
     "deepdash": "4.5.1",
@@ -32,6 +38,7 @@
     "html-react-parser": "^3.0.1",
     "html-to-react": "^1.5.0",
     "jotai": "1.7.2",
+    "lodash": "^4.17.21",
     "monaco-editor": "^0.33.0",
     "react": "18.3.1",
     "react-bootstrap": "^2.4.0",
@@ -50,15 +57,10 @@
     "react-toastify": "10.0.5",
     "rehype-raw": "^7.0.0",
     "typescript": "^4.9.5",
+    "uuid": "11.0.5",
     "wait-on": "^7.2.0",
     "web-vitals": "^2.1.2",
-    "websocket": "1.0.34",
-    "uuid": "11.0.5",
-    "lodash": "^4.17.21",
-    "@xterm/xterm": "5.5.0",
-    "@xterm/addon-attach": "0.11.0",
-    "@xterm/addon-fit": "0.10.0",
-    "@xterm/addon-web-links": "0.11.0"
+    "websocket": "1.0.34"
   },
   "devDependencies": {
     "@types/dompurify": "^2.4.0",
