--- a/.github/workflows/electron-release.yml
+++ b/.github/workflows/electron-release.yml
@@ -1,4 +1,4 @@
-name: MacOS Build and Release Electron App
+name: Combined Build and Release
 
 on:
   push:
@@ -6,11 +6,13 @@ on:
       - '*'
 
 jobs:
-  build:
-    runs-on: macos-latest
+  setup:
+    name: Setup Go and Node.js
+    runs-on: ubuntu-latest
 
-    env:
-      CI: false
+    outputs:
+      go-version: '1.23'
+      node-version: '22.7'
 
     steps:
       - name: Checkout code
@@ -19,13 +21,39 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.23'
+          go-version: ${{ steps.setup.outputs.go-version }}
 
-      - name: Set up Node.js
+      - name: Set up Node.js for Electron app
         uses: actions/setup-node@v4
         with:
-          node-version: '22.7'
+          node-version: ${{ steps.setup.outputs.node-version }}
 
+  build-go:
+    name: Build and Release Go Binary with GoReleaser
+    runs-on: ubuntu-latest
+    needs: setup  # This job depends on the setup job
+
+    steps:
+      - name: Install Go dependencies
+        run: make init
+
+      - name: Install GoReleaser
+        uses: goreleaser/goreleaser-action@v2
+        with:
+          version: latest
+
+      - name: Build and release Go binary
+        env:
+          POSTHOG_API_KEY: ${{ secrets.POSTHOG_API_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: goreleaser release --rm-dist
+
+  build-electron:
+    name: Build and Release Electron App
+    runs-on: macos-latest
+    needs: setup  # This job depends on the setup job
+
+    steps:
       - name: Install dependencies
         run: make init
 
@@ -50,48 +78,43 @@ jobs:
           echo "tag_name=$TAG_NAME" >> $GITHUB_ENV
           echo "version=$VERSION" >> $GITHUB_ENV
 
-      - name: Upload artifacts
+      - name: Upload Electron app as artifact
         uses: actions/upload-artifact@v4
         with:
           name: zasper-${{ env.version }}-arm64.dmg
           path: ui/dist/zasper-${{ env.version }}-arm64.dmg
 
-      - name: Create Release Asset
-        if: github.event_name == 'push' && github.ref_type == 'tag'
+  release:
+    name: Create GitHub Release for Electron App
+    runs-on: ubuntu-latest
+    needs: [build-go, build-electron] 
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Extract tag name and version
         run: |
-          TAG_NAME=${{ env.tag_name }}
-          VERSION=${{ env.version }}
+          TAG_NAME=$(echo $GITHUB_REF | sed 's/refs\/tags\///')
+          VERSION=$(echo "$TAG_NAME" | sed 's/^v//')
+          echo "tag_name=$TAG_NAME" >> $GITHUB_ENV
+          echo "version=$VERSION" >> $GITHUB_ENV
 
-          # Check if the release already exists
-          release_url="https://api.github.com/repos/${{ github.repository }}/releases/tags/$TAG_NAME"
-          release_exists=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -s -o /dev/null -w "%{http_code}" $release_url)
+      - name: Create new release (if not exists)
+        run: |
+          release_response=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                                   -X POST \
+                                   -d "{\"tag_name\":\"${{ env.tag_name }}\", \"name\":\"Release ${{ env.tag_name }}\"}" \
+                                   "https://api.github.com/repos/${{ github.repository }}/releases")
+          echo "Release created: $release_response"
 
-          if [ "$release_exists" -ne 200 ]; then
-            echo "Release does not exist, creating a new release..."
 
-            # Create a new release
-            release_response=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-                                     -X POST \
-                                     -d "{\"tag_name\":\"$TAG_NAME\", \"name\":\"Release $TAG_NAME\"}" \
-                                     "https://api.github.com/repos/${{ github.repository }}/releases")
+      - name: Upload Electron app to release
+        run: |
+          ARTIFACT_PATH="ui/dist/zasper-${{ env.version }}-arm64.dmg"
+          upload_url=$(echo "$release_response" | jq -r .upload_url | sed 's/{?name,label}//')
+          curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+               -H "Content-Type: application/zip" \
+               --data-binary "@$ARTIFACT_PATH" \
+               "$upload_url?name=zasper-${{ env.version }}-arm64.dmg"
 
-            # Extract the upload URL from the release response
-            upload_url=$(echo "$release_response" | jq -r .upload_url | sed 's/{?name,label}//')
-
-            # Path to the artifact to upload
-            ARTIFACT_PATH="ui/dist/zasper-${VERSION}-arm64.dmg"
-
-            # Check if the artifact exists
-            if [ -f "$ARTIFACT_PATH" ]; then
-              # Upload the artifact to the release
-              echo "Uploading artifact..."
-              curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-                   -H "Content-Type: application/zip" \
-                   --data-binary "@$ARTIFACT_PATH" \
-                   "$upload_url?name=zasper-${VERSION}-arm64.dmg"
-            else
-              echo "Artifact $ARTIFACT_PATH not found, skipping upload."
-            fi
-          else
-            echo "Release for tag $TAG_NAME already exists, skipping release creation."
-          fi
