--- a/.github/workflows/electron-release.yml
+++ b/.github/workflows/electron-release.yml
@@ -14,6 +14,11 @@ jobs:
       go-version: '1.23'
       node-version: '22.7'
 
+  build-go:
+    name: Build and Release Go Binary with GoReleaser
+    runs-on: ubuntu-latest
+    needs: setup  # This job depends on the setup job
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -27,13 +32,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ steps.setup.outputs.node-version }}
-
-  build-go:
-    name: Build and Release Go Binary with GoReleaser
-    runs-on: ubuntu-latest
-    needs: setup  # This job depends on the setup job
-
-    steps:
+          
       - name: Install GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
@@ -51,6 +50,19 @@ jobs:
     needs: setup  # This job depends on the setup job
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: ${{ steps.setup.outputs.go-version }}
+
+      - name: Set up Node.js for Electron app
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ steps.setup.outputs.node-version }}
+
       - name: Install dependencies
         run: make init
 
