--- a/.github/workflows/electron-release.yml
+++ b/.github/workflows/electron-release.yml
@@ -36,15 +36,13 @@ jobs:
     steps:
 
       - name: Install GoReleaser
-        uses: goreleaser/goreleaser-action@v2
+        uses: goreleaser/goreleaser-action@v6
         with:
-          version: latest
-
-      - name: Build and release Go binary
+          version: '~> v2'
+          args: release --clean
         env:
           POSTHOG_API_KEY: ${{ secrets.POSTHOG_API_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: goreleaser release --rm-dist
 
   build-electron:
     name: Build and Release Electron App
@@ -58,12 +56,12 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: ${{ steps.setup.outputs.go-version }}
+          go-version: '1.23'
 
-      - name: Set up Node.js for Electron app
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ steps.setup.outputs.node-version }}
+          node-version: '22.7'
 
       - name: Install dependencies
         run: make init
