--- a/.github/workflows/electron-release.yml
+++ b/.github/workflows/electron-release.yml
@@ -34,6 +34,18 @@ jobs:
     needs: setup 
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.23'
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22.7'
 
       - name: Install GoReleaser
         uses: goreleaser/goreleaser-action@v6
