--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,18 +1,21 @@
+version: 2
 builds:
-  - id: zasper
-    main: ./app.go
-    binary: zasper 
+  - main: ./app.go
     goos:
       - linux
-      - darwin
       - windows
+      - darwin
     goarch:
       - amd64
-    env:
-      - CGO_ENABLED=0
-    # Custom build command
-    build_flags:
-      - -ldflags="-s -w"
-    custom:
-      # Run make build in your build process
-      build: make init && make build
+      - arm64
+archives:
+  - format: tar.gz
+    name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
+dockers:
+  - image: "ghcr.io/prasunanand/zasper:{{ .Version }}"
+    dockerfile: Dockerfile
+release:
+  github:
+    owner: prasunanand
+    name: zasper
+    prerelease: true
