--- a/.github/workflows/electron-release.yml
+++ b/.github/workflows/electron-release.yml
@@ -33,6 +33,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup 
 
+    env:
+      CI: false
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -60,6 +63,9 @@ jobs:
     name: Build and Release Electron App
     runs-on: macos-latest
     needs: setup  # This job depends on the setup job
+
+    env:
+      CI: false
 
     steps:
       - name: Checkout code
