--- a/.github/workflows/electron-release.yml
+++ b/.github/workflows/electron-release.yml
@@ -86,7 +86,7 @@ jobs:
   release:
     name: Create GitHub Release for Electron App
     runs-on: ubuntu-latest
-    needs: [build-electron] 
+    needs: [build-electron, build-go] 
 
     steps:
       - name: Checkout code
@@ -98,15 +98,6 @@ jobs:
           VERSION=$(echo "$TAG_NAME" | sed 's/^v//')
           echo "tag_name=$TAG_NAME" >> $GITHUB_ENV
           echo "version=$VERSION" >> $GITHUB_ENV
-
-      - name: Create new release (if not exists)
-        run: |
-          release_response=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-                                   -X POST \
-                                   -d "{\"tag_name\":\"${{ env.tag_name }}\", \"name\":\"Release ${{ env.tag_name }}\"}" \
-                                   "https://api.github.com/repos/${{ github.repository }}/releases")
-          echo "Release created: $release_response"
-
 
       - name: Upload Electron app to release
         run: |
