--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -9,20 +9,16 @@ builds:
       - amd64
       - arm64
     ldflags: "-ldflags '{{.Env.VERSION_BUILD_FLAG}}'"
-build:
-  # Configuration for the build process
-  hooks:
-    pre:
-      # Commands to run before building
-      - make init
-    post:
-      # Commands to run after building
-      - echo "Build completed"
+    hooks:
+      pre:
+        - make init
+      post:
+        - echo "Build completed"
 archives:
   - format: tar.gz
-    name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
+    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
 release:
   github:
     owner: prasunanand
     name: zasper
-    prerelease: true
+    draft: false
