--- a/.github/workflows/electron-release.yml
+++ b/.github/workflows/electron-release.yml
@@ -5,18 +5,26 @@ on:
     tags:
       - '*'
 
+permissions:
+  contents: write
+
 jobs:
   build-go:
     name: Build and Release Go Binary with GoReleaser
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v5
         with:
           go-version: '1.23'
+      
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22.7'
 
       - name: Set VERSION_BUILD_FLAG
         run: echo "VERSION_BUILD_FLAG=-X main.version=$(git describe --tags)" >> $GITHUB_ENV
@@ -41,7 +49,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
           go-version: '1.23'
 
