--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,27 +1,39 @@
+project_name: zasper
+
 version: 2
+
 before:
   hooks:
     - go mod tidy
+    - npm --prefix ./ui i
+    - env CI=false npm --prefix ./ui run build
+
 builds:
-  - main: ./app.go
-    goos:
-      - linux
-      - windows
-      - darwin
-    goarch:
-      - amd64
-    ldflags: "-ldflags '{{.Env.VERSION_BUILD_FLAG}}'"
-    hooks:
-      pre:
-        - make init
-      post:
-        - echo "Build completed"
-checksum:
-  name_template: 'checksums.txt'
+  - id: zasper
+    env:
+      - CGO_ENABLED=0
+    main: .
+    targets:
+      - darwin_amd64
+      - darwin_arm64
+      - linux_386
+      - linux_amd64
+      - linux_arm64
+      - windows_386
+      - windows_amd64
+      - windows_arm64
+      - android_arm64
+
 archives:
-  - format: tar.gz
-    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
-release:
-  github:
-    owner: prasunanand
-    name: zasper
+  - id: archive
+    builds:
+     - zasper
+    files:
+      - LICENSE
+    name_template: >-
+      {{ .ProjectName }}-{{- .Os }}-{{ .Arch }}
+    format_overrides:
+      - goos: windows
+        formats:
+          - zip
+        
