--- a/.github/workflows/electron-release.yml
+++ b/.github/workflows/electron-release.yml
@@ -89,19 +89,58 @@ jobs:
           name: zasper-${{ env.version }}-arm64.dmg
           path: ui/dist/zasper-${{ env.version }}-arm64.dmg
 
-      - name: Extract tag name and version
+      - name: Push Release Asset
+        if: github.event_name == 'push' && github.ref_type == 'tag'
         run: |
-          TAG_NAME=$(echo $GITHUB_REF | sed 's/refs\/tags\///')
-          VERSION=$(echo "$TAG_NAME" | sed 's/^v//')
-          echo "tag_name=$TAG_NAME" >> $GITHUB_ENV
-          echo "version=$VERSION" >> $GITHUB_ENV
-
-      - name: Upload Electron app to release
-        run: |
-          ARTIFACT_PATH="ui/dist/zasper-${{ env.version }}-arm64.dmg"
-          upload_url=$(echo "$release_response" | jq -r .upload_url | sed 's/{?name,label}//')
-          curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-               -H "Content-Type: application/zip" \
-               --data-binary "@$ARTIFACT_PATH" \
-               "$upload_url?name=zasper-${{ env.version }}-arm64.dmg"
-
+          TAG_NAME=${{ env.tag_name }}
+          VERSION=${{ env.version }}
+    
+          # Check if the release already exists for the tag
+          release_url="https://api.github.com/repos/${{ github.repository }}/releases/tags/$TAG_NAME"
+          release_exists=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -s -o /dev/null -w "%{http_code}" $release_url)
+    
+          if [ "$release_exists" -eq 200 ]; then
+            echo "Release exists, uploading asset to the existing release."
+    
+            # If the release exists, extract the upload URL from the existing release
+            upload_url=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -s $release_url | jq -r .upload_url | sed 's/{?name,label}//')
+    
+            # Path to the artifact to upload
+            ARTIFACT_PATH="ui/dist/zasper-${VERSION}-arm64.dmg"
+    
+            # Check if the artifact exists and upload it
+            if [ -f "$ARTIFACT_PATH" ]; then
+              echo "Uploading artifact..."
+              curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                    -H "Content-Type: application/zip" \
+                    --data-binary "@$ARTIFACT_PATH" \
+                    "$upload_url?name=zasper-${VERSION}-arm64.dmg"
+            else
+              echo "Artifact $ARTIFACT_PATH not found, skipping upload."
+            fi
+          else
+            echo "Release for tag $TAG_NAME doesn't exist. Creating a new release and uploading asset."
+    
+            # Create a new release if it doesn't exist
+            release_response=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                                    -X POST \
+                                    -d "{\"tag_name\":\"$TAG_NAME\", \"name\":\"Release $TAG_NAME\"}" \
+                                    "https://api.github.com/repos/${{ github.repository }}/releases")
+    
+            # Extract the upload URL from the new release response
+            upload_url=$(echo "$release_response" | jq -r .upload_url | sed 's/{?name,label}//')
+    
+            # Path to the artifact to upload
+            ARTIFACT_PATH="ui/dist/zasper-${VERSION}-arm64.dmg"
+    
+            # Check if the artifact exists and upload it
+            if [ -f "$ARTIFACT_PATH" ]; then
+              echo "Uploading artifact..."
+              curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                    -H "Content-Type: application/zip" \
+                    --data-binary "@$ARTIFACT_PATH" \
+                    "$upload_url?name=zasper-${VERSION}-arm64.dmg"
+            else
+              echo "Artifact $ARTIFACT_PATH not found, skipping upload."
+            fi
+          fi
