--- a/.github/workflows/electron-release.yml
+++ b/.github/workflows/electron-release.yml
@@ -1,13 +1,46 @@
-name: MacOS Build and Release Electron App
+name: Combined Build and Release
 
 on:
   push:
     tags:
       - '*'
 
+permissions:
+  contents: write
+
 jobs:
-  build:
+  build-go:
+    name: Build and Release Go Binary with GoReleaser
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.23'
+      
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22.7'
+
+      - name: Set VERSION_BUILD_FLAG
+        run: echo "VERSION_BUILD_FLAG=-X main.version=$(git describe --tags)" >> $GITHUB_ENV
+
+      - name: Build and Release Go Binary with GoReleaser
+        uses: goreleaser/goreleaser-action@v6
+        with:
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          POSTHOG_API_KEY: ${{ secrets.POSTHOG_API_KEY }}
+
+  build-electron:
+    name: Build and Release Electron App
     runs-on: macos-latest
+    needs: build-go
 
     env:
       CI: false
@@ -17,7 +50,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
           go-version: '1.23'
 
@@ -50,48 +83,64 @@ jobs:
           echo "tag_name=$TAG_NAME" >> $GITHUB_ENV
           echo "version=$VERSION" >> $GITHUB_ENV
 
-      - name: Upload artifacts
+      - name: Upload Electron app as artifact
         uses: actions/upload-artifact@v4
         with:
           name: zasper-${{ env.version }}-arm64.dmg
           path: ui/dist/zasper-${{ env.version }}-arm64.dmg
 
-      - name: Create Release Asset
+      - name: Push Release Asset
         if: github.event_name == 'push' && github.ref_type == 'tag'
         run: |
           TAG_NAME=${{ env.tag_name }}
           VERSION=${{ env.version }}
-
-          # Check if the release already exists
+    
+          # Check if the release already exists for the tag
           release_url="https://api.github.com/repos/${{ github.repository }}/releases/tags/$TAG_NAME"
           release_exists=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -s -o /dev/null -w "%{http_code}" $release_url)
-
-          if [ "$release_exists" -ne 200 ]; then
-            echo "Release does not exist, creating a new release..."
-
-            # Create a new release
-            release_response=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-                                     -X POST \
-                                     -d "{\"tag_name\":\"$TAG_NAME\", \"name\":\"Release $TAG_NAME\"}" \
-                                     "https://api.github.com/repos/${{ github.repository }}/releases")
-
-            # Extract the upload URL from the release response
-            upload_url=$(echo "$release_response" | jq -r .upload_url | sed 's/{?name,label}//')
-
+    
+          if [ "$release_exists" -eq 200 ]; then
+            echo "Release exists, uploading asset to the existing release."
+    
+            # If the release exists, extract the upload URL from the existing release
+            upload_url=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -s $release_url | jq -r .upload_url | sed 's/{?name,label}//')
+    
             # Path to the artifact to upload
             ARTIFACT_PATH="ui/dist/zasper-${VERSION}-arm64.dmg"
-
-            # Check if the artifact exists
+    
+            # Check if the artifact exists and upload it
             if [ -f "$ARTIFACT_PATH" ]; then
-              # Upload the artifact to the release
               echo "Uploading artifact..."
               curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-                   -H "Content-Type: application/zip" \
-                   --data-binary "@$ARTIFACT_PATH" \
-                   "$upload_url?name=zasper-${VERSION}-arm64.dmg"
+                    -H "Content-Type: application/zip" \
+                    --data-binary "@$ARTIFACT_PATH" \
+                    "$upload_url?name=zasper-${VERSION}-arm64.dmg"
             else
               echo "Artifact $ARTIFACT_PATH not found, skipping upload."
             fi
           else
-            echo "Release for tag $TAG_NAME already exists, skipping release creation."
+            echo "Release for tag $TAG_NAME doesn't exist. Creating a new release and uploading asset."
+    
+            # Create a new release if it doesn't exist
+            release_response=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                                    -X POST \
+                                    -d "{\"tag_name\":\"$TAG_NAME\", \"name\":\"Release $TAG_NAME\"}" \
+                                    "https://api.github.com/repos/${{ github.repository }}/releases")
+    
+            # Extract the upload URL from the new release response
+            upload_url=$(echo "$release_response" | jq -r .upload_url | sed 's/{?name,label}//')
+    
+            # Path to the artifact to upload
+            ARTIFACT_PATH="ui/dist/zasper-${VERSION}-arm64.dmg"
+    
+            # Check if the artifact exists and upload it
+            if [ -f "$ARTIFACT_PATH" ]; then
+              echo "Uploading artifact..."
+              curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                    -H "Content-Type: application/zip" \
+                    --data-binary "@$ARTIFACT_PATH" \
+                    "$upload_url?name=zasper-${VERSION}-arm64.dmg"
+            else
+              echo "Artifact $ARTIFACT_PATH not found, skipping upload."
+            fi
           fi
