--- a/ui/package.json
+++ b/ui/package.json
@@ -77,10 +77,13 @@
     "electron-dev": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
     "electron-package": "electron-builder --mac --linux",
     "electron-package-mac": "electron-builder --mac",
-    "electron-package-linux": "electron-builder --linux"
+    "electron-package-linux": "electron-builder --linux",
+    "electron-package-rpm": "electron-builder --linux rpm",
+    "electron-package-snap": "electron-builder --linux snap",
+    "electron-package-appImage": "electron-builder --linux AppImage"
   },
   "build": {
-    "appId": "io.zasper.prasunanand.zasper",
+    "appId": "io.zasper.app",
     "files": [
       "build/**/*",
       "node_modules/**/*"
@@ -96,6 +99,7 @@
       "target": "dmg"
     },
     "linux": {
+      "icon": "build/logo512.png",
       "target": "deb"
     }
   },
