--- a/ui/package.json
+++ b/ui/package.json
@@ -66,10 +66,18 @@
     "@types/dompurify": "^2.4.0",
     "electron": "^30.1.0",
     "electron-builder": "^24.13.3",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "prettier": "^3.5.3",
     "sass": "^1.77.8",
     "ts-standard": "^12.0.2"
   },
   "scripts": {
+    "lint": "eslint --fix src",
+    "format": "prettier --write .",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
