update eslint config

--- a/ui/.eslintrc.json
+++ b/ui/.eslintrc.json
@@ -18,6 +18,7 @@
     ],
     "react/prop-types": "off" ,
     "react/react-in-jsx-scope": "off",
-    "react/jsx-uses-react": "off"
+    "react/jsx-uses-react": "off",
+    "react/display-name": "off"
   }
 }
