--- a/ui/package.json
+++ b/ui/package.json
@@ -63,6 +63,7 @@
     "websocket": "1.0.34"
   },
   "devDependencies": {
+    "@electron/notarize": "^2.5.0",
     "@types/dompurify": "^2.4.0",
     "electron": "^30.1.0",
     "electron-builder": "^24.13.3",
@@ -92,6 +93,7 @@
   },
   "build": {
     "appId": "io.zasper.app",
+    "afterSign": "notarize.js",
     "files": [
       "build/**/*",
       "node_modules/**/*"
