--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,9 +2,9 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "main2" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main2" ]
+    branches: [ "main" ]
 
 permissions:
   contents: read
