--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Testing the electron app 
+name: Testing the frontend 
 
 on:
     pull_request:
@@ -13,7 +13,7 @@ jobs:
         steps:
             - name: Checkout the code
               uses: actions/checkout@v2
-              
+
             - name: Install dependencies
               run: make init
 
