Add notarization for electron and go binary

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,23 @@ jobs:
   build-go:
     name: Build and Release Go Binary with GoReleaser
     runs-on: ubuntu-latest
+    env:
+      # The base64 of the contents of your '.p12' key.
+      MACOS_SIGN_P12: ${{ secrets.MACOS_SIGN_P12 }}
+      # The password to open the '.p12' key.
+      MACOS_SIGN_PASSWORD: ${{ secrets.MACOS_SIGN_PASSWORD }}
+      # The base64 of the contents of your '.p8' key.
+      MACOS_NOTARY_KEY: ${{ secrets.MACOS_NOTARY_KEY }}
+      # The ID of the '.p8' key.
+      # You can find it in the filename, as well as the Apple Developer Portal
+      # website.
+      MACOS_NOTARY_KEY_ID: ${{ secrets.MACOS_NOTARY_KEY_ID }}
+      # The issuer UUID.
+      # You can find it in the Apple Developer Portal website.
+      MACOS_NOTARY_ISSUER_ID: ${{ secrets.MACOS_NOTARY_ISSUER_ID }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+      POSTHOG_API_KEY: ${{ secrets.POSTHOG_API_KEY }}
+      VERSION_BUILD_FLAG: ${{ github.ref_name }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -26,16 +43,10 @@ jobs:
         with:
           node-version: '22.7'
 
-      - name: Set VERSION_BUILD_FLAG
-        run: echo "VERSION_BUILD_FLAG=-X main.version=$(git describe --tags)" >> $GITHUB_ENV
-
       - name: Build and Release Go Binary with GoReleaser
         uses: goreleaser/goreleaser-action@v6
         with:
           args: release --clean
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-          POSTHOG_API_KEY: ${{ secrets.POSTHOG_API_KEY }}
 
   build-electron:
     name: Build and Release Electron App
