Added Notarization steps to Github Workflows (#35)
* update workflow

* update workflow

* Add entitlements.plist

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -32,11 +32,11 @@ builds:
 
 notarize:
   macos:
-      enabled: '{{ isEnvSet "MACOS_SIGN_P12" }}'
+    - enabled: '{{ isEnvSet "MACOS_SIGN_P12" }}'
       sign:
         certificate: "{{.Env.MACOS_SIGN_P12}}"
         password: "{{.Env.MACOS_SIGN_PASSWORD}}"
-        entitlements: ./path/to/entitlements.xml
+        entitlements: ./resources/entitlements.mac.plist
       notarize:
         issuer_id: "{{.Env.MACOS_NOTARY_ISSUER_ID}}"
         key_id: "{{.Env.MACOS_NOTARY_KEY_ID}}"
