Make Prettier skip linting carriage return for Windows

--- a/ui/.eslintrc.json
+++ b/ui/.eslintrc.json
@@ -13,7 +13,8 @@
         "singleQuote": true,
         "semi": true,
         "trailingComma": "es5",
-        "printWidth": 100
+        "printWidth": 100,
+        "endOfLine": "auto"
       }
     ],
     "react/prop-types": "off" ,
