--- a/ui/package.json
+++ b/ui/package.json
@@ -108,7 +108,11 @@
     },
     "mac": {
       "icon": "build/logo512.png",
-      "target": "dmg"
+      "target": "dmg",
+      "category": "public.app-category.developer-tools",
+      "identity": "Prasun Anand (C72MG66GBX)",
+      "entitlements": "resources/entitlements.mac.plist",
+      "entitlementsInherit": "resources/entitlements.mac.plist"
     },
     "linux": {
       "icon": "build/logo512.png",
