add teamId to package.jsonm

--- a/ui/package.json
+++ b/ui/package.json
@@ -95,7 +95,6 @@
   },
   "build": {
     "appId": "io.zasper.app",
-    "afterSign": "notarize.js",
     "files": [
       "build/**/*",
       "node_modules/**/*"
@@ -113,7 +112,10 @@
       "identity": "Prasun Anand (C72MG66GBX)",
       "hardenedRuntime": true,
       "entitlements": "resources/entitlements.mac.plist",
-      "entitlementsInherit": "resources/entitlements.mac.plist"
+      "entitlementsInherit": "resources/entitlements.mac.plist",
+      "notarize" : {
+        "teamId": "C72MG66GBX"
+      }
     },
     "linux": {
       "icon": "build/logo512.png",
