Code signing for mac complete 🚀 (#65)
* update timeout duration

* Add requirements for apple code signing and notarization

* Correct versioning

* Setup code signing

* update action

* add teamId to package.jsonm

* remove notarize script

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,7 +18,7 @@ builds:
       - CGO_ENABLED=0
     main: .
     ldflags:
-      - -s -w -X main.build={{.Env.VERSION_BUILD_FLAG}}
+      - -s -w -X main.version={{.Env.VERSION_BUILD_FLAG}}
     targets:
       - darwin_amd64
       - darwin_arm64
@@ -42,7 +42,7 @@ notarize:
         key_id: "{{.Env.MACOS_NOTARY_KEY_ID}}"
         key: "{{.Env.MACOS_NOTARY_KEY}}"
         wait: true
-        timeout: 20m
+        timeout: 30m
 
 archives:
   - id: archive
@@ -56,4 +56,3 @@ archives:
       - goos: windows
         formats:
           - zip
-        
