--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
       MACOS_NOTARY_KEY: ${{ secrets.MACOS_NOTARY_KEY }}
       MACOS_NOTARY_KEY_ID: ${{ secrets.MACOS_NOTARY_KEY_ID }}
       MACOS_NOTARY_ISSUER_ID: ${{ secrets.MACOS_NOTARY_ISSUER_ID }}
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       POSTHOG_API_KEY: ${{ secrets.POSTHOG_API_KEY }}
       VERSION_BUILD_FLAG: ${{ github.ref_name }}
     steps:
@@ -29,7 +29,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.23'
-      
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -70,11 +70,16 @@ jobs:
           POSTHOG_API_KEY: ${{ secrets.POSTHOG_API_KEY }}
         run: make build
 
+      - uses: apple-actions/import-codesign-certs@v5
+        with:
+          p12-file-base64: ${{ secrets.MACOS_SIGN_P12 }}
+          p12-password: ${{ secrets.MACOS_SIGN_PASSWORD }}
+
       - name: Package Electron app
         env:
           POSTHOG_API_KEY: ${{ secrets.POSTHOG_API_KEY }}
           APPLE_ID: ${{ secrets.APPLE_ID }}
-          APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
+          APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
 
         run: make electron-package
 
@@ -82,7 +87,7 @@ jobs:
         id: extract_tag
         run: |
           TAG_NAME=$(echo $GITHUB_REF | sed 's/refs\/tags\///')
-          
+
           # Remove 'v' prefix from tag name if it exists
           VERSION=$(echo "$TAG_NAME" | sed 's/^v//')
 
@@ -100,20 +105,20 @@ jobs:
         run: |
           TAG_NAME=${{ env.tag_name }}
           VERSION=${{ env.version }}
-    
+
           # Check if the release already exists for the tag
           release_url="https://api.github.com/repos/${{ github.repository }}/releases/tags/$TAG_NAME"
           release_exists=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -s -o /dev/null -w "%{http_code}" $release_url)
-    
+
           if [ "$release_exists" -eq 200 ]; then
             echo "Release exists, uploading asset to the existing release."
-    
+
             # If the release exists, extract the upload URL from the existing release
             upload_url=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -s $release_url | jq -r .upload_url | sed 's/{?name,label}//')
-    
+
             # Path to the artifact to upload
             ARTIFACT_PATH="ui/dist/zasper-${VERSION}-arm64.dmg"
-    
+
             # Check if the artifact exists and upload it
             if [ -f "$ARTIFACT_PATH" ]; then
               echo "Uploading artifact..."
@@ -126,19 +131,19 @@ jobs:
             fi
           else
             echo "Release for tag $TAG_NAME doesn't exist. Creating a new release and uploading asset."
-    
+
             # Create a new release if it doesn't exist
             release_response=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
                                     -X POST \
                                     -d "{\"tag_name\":\"$TAG_NAME\", \"name\":\"Release $TAG_NAME\"}" \
                                     "https://api.github.com/repos/${{ github.repository }}/releases")
-    
+
             # Extract the upload URL from the new release response
             upload_url=$(echo "$release_response" | jq -r .upload_url | sed 's/{?name,label}//')
-    
+
             # Path to the artifact to upload
             ARTIFACT_PATH="ui/dist/zasper-${VERSION}-arm64.dmg"
-    
+
             # Check if the artifact exists and upload it
             if [ -f "$ARTIFACT_PATH" ]; then
               echo "Uploading artifact..."
