update windows build action

--- a/.github/workflows/electron-windows.yml
+++ b/.github/workflows/electron-windows.yml
@@ -36,7 +36,7 @@ jobs:
         run: POSTHOG_API_KEY=${{ secrets.POSTHOG_API_KEY }} && make build
 
       - name: Package Electron app
-        run: POSTHOG_API_KEY=${{ secrets.POSTHOG_API_KEY }} && make electron-package-mac
+        run: POSTHOG_API_KEY=${{ secrets.POSTHOG_API_KEY }} && make electron-package-windows
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
